--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -72,8 +72,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 1
-	you were off by 12
+	The number i was thinking of was: 15
+	you were off by -2
 	
 <--
 	[OUTPUT OK]
@@ -232,6 +232,35 @@ TestCh7Ex3.java:40: error: incompatible types: int[] cannot be converted to int
 	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
+<b>          [SCORE] 0.20</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+[COMPILING] Exercise5.java
+	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] TestCh7Ex5
+[COMPILING] TestCh7Ex5.java
+	[ERROR] javac failed TestCh7Ex5.java
+ ----begin compile output------- 
+TestCh7Ex5.java:54: error: method areFactors in class Exercise5 cannot be applied to given types;
+	            boolean gotBack = Exercise5.areFactors(n, someInts);
+	                                       ^
+	  required: int
+	  found: int,int[]
+	  reason: actual and formal argument lists differ in length
+	1 error
+	
+-----------END COMPILE-------
+[SUMMARY] 
+	['Exercise5: COMPILE ERROR (- 0.30)'
+	 'Exercise6: MISSING (- 0.50)']
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] 0.20</b>
 
 </pre></body></html>
