--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -71,8 +71,8 @@ How many seconds? 13 seconds = 0 hours, 0 minutes, and 0 seconds
 I'm thinking of a number between 1 and 100, inclusive.
 	Can you guess what it is?
 	Type your guess: Your guess is: 13
-	The number I was thinking of was: 49
-	You were off by: 36
+	The number I was thinking of was: 46
+	You were off by: 33
 	
 <--
 	[OUTPUT OK]
@@ -151,6 +151,20 @@ The result is 5.0
 	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
+<b>          [SCORE] 0.00</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+[SUMMARY] 
+	['Exercise5: MISSING (- 0.50)'
+	 'Exercise6: MISSING (- 0.50)']
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] 0.00</b>
 
 </pre></body></html>
