--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -43,8 +43,8 @@ How many seconds?: 0 hours, 0 minutes, 13 seconds.
 [RUNNING] Exercise4
 -->
 What do you think my number is?: Your number was: 13
-	My number was: 35
-	You were off by: 22
+	My number was: 65
+	You were off by: 52
 	
 <--
 	[OUTPUT OK]
@@ -124,6 +124,18 @@ Ch6Ex4.java:56: error: cannot find symbol
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
+<b>          [SCORE] 0.25</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+	[ERROR] No chapter work for:chapter7
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
