--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 45
-	You were off by: 32
+	The number I was thinking of was: 70
+	You were off by: 57
 	
 <--
 	[OUTPUT OK]
@@ -286,6 +286,116 @@ TestCh7Ex4.java:47: error: cannot find symbol
 	 'Exercise4: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
+<b>          [SCORE] 0.70</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+[COMPILING] Exercise5.java
+	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] TestCh7Ex5
+[COMPILING] TestCh7Ex5.java
+	[SUCCESSFUL COMPILE] TestCh7Ex5.java
+[RUNNING] TestCh7Ex5
+-->
+Test: Chapter7, Exercise5.areFactors()
+	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
+	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
+	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  TEST FINISHED, PASSED: 2/6.
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise6.java
+	[ERROR] javac failed Exercise6.java Exercise6.java:3: error: illegal start of expression
+	<<<<<<< HEAD
+	^
+	Exercise6.java:3: error: illegal start of expression
+	<<<<<<< HEAD
+	  ^
+	Exercise6.java:3: error: illegal start of expression
+	<<<<<<< HEAD
+	    ^
+	Exercise6.java:4: error: > expected
+			int n = 45;
+			^
+	Exercise6.java:4: error: '.class' expected
+			int n = 45;
+			      ^
+	Exercise6.java:4: error: ';' expected
+			int n = 45;
+			       ^
+	Exercise6.java:22: error: illegal start of expression
+	=======
+	^
+	Exercise6.java:22: error: illegal start of expression
+	=======
+	  ^
+	Exercise6.java:22: error: illegal start of expression
+	=======
+	    ^
+	Exercise6.java:22: error: illegal start of expression
+	=======
+	      ^
+	Exercise6.java:23: error: '.class' expected
+			int[] array = new int[]{3,3,3};
+			      ^
+	Exercise6.java:23: error: illegal start of expression
+			int[] array = new int[]{3,3,3};
+			            ^
+	Exercise6.java:23: error: ';' expected
+			int[] array = new int[]{3,3,3};
+			             ^
+	Exercise6.java:23: error: not a statement
+			int[] array = new int[]{3,3,3};
+			                     ^
+	Exercise6.java:23: error: ';' expected
+			int[] array = new int[]{3,3,3};
+			                       ^
+	Exercise6.java:23: error: not a statement
+			int[] array = new int[]{3,3,3};
+			                        ^
+	Exercise6.java:23: error: ';' expected
+			int[] array = new int[]{3,3,3};
+			                         ^
+	Exercise6.java:42: error: illegal start of expression
+	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
+	^
+	Exercise6.java:42: error: illegal start of expression
+	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
+	   ^
+	Exercise6.java:42: error: illegal start of expression
+	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
+	      ^
+	Exercise6.java:42: error: ';' expected
+	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
+	         ^
+	Exercise6.java:42: error: ';' expected
+	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
+	                                                ^
+	22 errors
+	
+[SUMMARY] 
+	['Exercise5: PASSED - EXCELLENT!'
+	 'Exercise6: COMPILE ERROR (- 0.30)']
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] 0.70</b>
 
 </pre></body></html>
