--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -65,7 +65,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 13, you were 0 off.
+	You guessed 13, I was thinking of 37, you were 24 off.
 <--
 	[OUTPUT OK]
 
@@ -269,6 +269,59 @@ abcdef
 	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
+<b>          [SCORE] <font color="green">1.00</font></b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+[COMPILING] Exercise5.java
+	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] TestCh7Ex5
+[COMPILING] TestCh7Ex5.java
+	[SUCCESSFUL COMPILE] TestCh7Ex5.java
+[RUNNING] TestCh7Ex5
+-->
+Test: Chapter7, Exercise5.areFactors()
+	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
+	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
+	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
+	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
+	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
+	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
+	  TEST FINISHED, PASSED: 6/6.
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise6.java
+	[SUCCESSFUL COMPILE] Exercise6.java
+[TESTING WITH] TestCh7Ex6
+[COMPILING] TestCh7Ex6.java
+	[SUCCESSFUL COMPILE] TestCh7Ex6.java
+[RUNNING] TestCh7Ex6
+-->
+Test: Chapter7, Exercise6.arePrimeFactors()
+	  [PASSED] Exercise6.arePrimeFactors("8, [4, 2, 1]") 
+	  [PASSED] Exercise6.arePrimeFactors("8, [2, 2, 2]") 
+	  [PASSED] Exercise6.arePrimeFactors("15, [3, 5]") 
+	  [PASSED] Exercise6.arePrimeFactors("35, [5, 7, 1]") 
+	  [PASSED] Exercise6.arePrimeFactors("30, [2, 3, 5]") 
+	  [PASSED] Exercise6.arePrimeFactors("31, [2, 3, 5]") 
+	  [PASSED] Exercise6.arePrimeFactors("2431, [11, 13, 17]") 
+	  TEST FINISHED, PASSED: 7/7.
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Exercise5: PASSED - EXCELLENT!'
+	 'Exercise6: PASSED - EXCELLENT!']
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
