--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -66,8 +66,8 @@ Total number of seconds: 13 seconds = 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 0 and 100 (including both). Can you guess what it is? 
 	Your guess is: 13
-	The number I was thinking of is: 74
-	You were off by: -61
+	The number I was thinking of is: 13
+	You were off by: 0
 	
 <--
 	[OUTPUT OK]
@@ -215,6 +215,18 @@ I'm thinking of a number between 0 and 100 (including both). Can you guess what 
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
+<b>          [SCORE] 0.25</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+	[ERROR] No chapter work for:chapter7
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
