--- a/stureports/think-java/shanebaxter101.think-java_results.html
+++ b/stureports/think-java/shanebaxter101.think-java_results.html
@@ -71,8 +71,8 @@ Im thinking of a number between 1 and 100,(including both)
 	Can you guess what it is?
 	Type a number: 
 	Your guess is: 13
-	The number I was thinking of was: 12
-	You were off by: 1
+	The number I was thinking of was: 13
+	You were off by: 0
 	
 <--
 	[OUTPUT OK]
@@ -314,5 +314,60 @@ Im thinking of a number between 1 and 100,(including both)
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
 <b>          [SCORE] 0.70</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
+  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise5', 'Exercise6']
+[COMPILING] Exercise5.java
+	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] TestCh7Ex5
+[COMPILING] TestCh7Ex5.java
+	[SUCCESSFUL COMPILE] TestCh7Ex5.java
+[RUNNING] TestCh7Ex5
+-->
+Test: Chapter7, Exercise5.areFactors()
+	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
+	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
+	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
+	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
+	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
+	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
+	  TEST FINISHED, PASSED: 6/6.
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise6.java
+	[SUCCESSFUL COMPILE] Exercise6.java
+[TESTING WITH] TestCh7Ex6
+[COMPILING] TestCh7Ex6.java
+	[SUCCESSFUL COMPILE] TestCh7Ex6.java
+[RUNNING] TestCh7Ex6
+-->
+Test: Chapter7, Exercise6.arePrimeFactors()
+	  [PASSED] Exercise6.arePrimeFactors("8, [4, 2, 1]") 
+	  [PASSED] Exercise6.arePrimeFactors("8, [2, 2, 2]") 
+	  [PASSED] Exercise6.arePrimeFactors("15, [3, 5]") 
+	  [   :( ] Exercise6.arePrimeFactors("35, [5, 7, 1]"): 
+			EXPECTED: false
+			RECEIVED: true
+	  [PASSED] Exercise6.arePrimeFactors("30, [2, 3, 5]") 
+	  [PASSED] Exercise6.arePrimeFactors("31, [2, 3, 5]") 
+	  [PASSED] Exercise6.arePrimeFactors("2431, [11, 13, 17]") 
+	  TEST FINISHED, PASSED: 6/7.
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Exercise5: PASSED - EXCELLENT!'
+	 'Exercise6: PASSED - EXCELLENT!']
+[DONE chapter7]
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
